tests/errors/pops-err.src
.IPPcode18
defvar GF@fail
pops GF@fail